fixed jumping upgrade

--- a/src/popup/components/Authentication/UpgradeScreen/upgrade-screen.pcss
+++ b/src/popup/components/Authentication/UpgradeScreen/upgrade-screen.pcss
@@ -12,8 +12,7 @@
     }
 
     &__head {
-        flex: 1 1 auto;
-        padding-bottom: 16px;
+        padding-bottom: 70px;
     }
 
     &__title {
